--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portafolio-cjjc",
+  "name": "cjjc-site",
   "version": "1.0.0",
   "description": "Portafolio personal para alojar trabajos realizados.",
   "main": "main.js",
